<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/tv_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pleaseSelect"
        android:fontFamily="@font/nsreb"
        android:textSize="32sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <Button
        android:id="@+id/rs_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        android:fontFamily="@font/nsreb"
        android:textSize="54sp"
        app:layout_constraintBottom_toTopOf="@id/ci_mm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onReserveButtonClick" />

    <Button
        android:id="@+id/ci_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin"
        android:fontFamily="@font/nsreb"
        android:textSize="54sp"
        android:backgroundTint="#FFBB86FC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onCheckinButtonClick" />

    <Button
        android:id="@+id/co_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:fontFamily="@font/nsreb"
        android:textSize="54sp"
        android:backgroundTint="#FF03DAC5"
        app:layout_constraintTop_toBottomOf="@id/ci_mm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onCheckoutButtonClick" />

    <Button
        android:id="@+id/ab_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:fontFamily="@font/nsreb"
        android:textSize="54sp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/co_mm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onAboutButtonClick" />

    <Button
    android:id="@+id/ab_sc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/selfcheck"
    android:fontFamily="@font/nsreb"
    android:textSize="54sp"
    android:backgroundTint="@color/teal_700"
    app:layout_constraintTop_toBottomOf="@id/ab_mm"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:onClick="onSelfCheckButtonClick" />

</androidx.constraintlayout.widget.ConstraintLayout>