<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/li_iv"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/icon"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/li_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/nsreb"
        android:hint="@string/id"
        android:gravity="center" />

    <EditText
        android:id="@+id/li_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/li_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/nsreb"
        android:hint="@string/pw"
        android:gravity="center"
        android:inputType="textPassword"  />

    <Button
        android:id="@+id/li_bt"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/nsreb"
        android:gravity="center"
        android:text="@string/confirm"
        android:backgroundTint="@color/teal_700"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick = "onLoginButtonClick" />

    <Button
        android:id="@+id/li_rg"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nsreb"
        android:gravity="center"
        android:text="@string/register"
        android:backgroundTint="@color/teal_700"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/li_bt"
        android:onClick = "onRegisterButtonClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>